musicchain/include/musicchain.h

// ---- Initialization -------------------------------------------------

/** Initialize the library. Call once before any other function.
 *  Returns 0 on success, non-zero on failure. */
MUSICCHAIN_API int mc_init(void);
/** Release all library resources. */
MUSICCHAIN_API void mc_cleanup(void);
/** Free a string or buffer allocated by the library. */
MUSICCHAIN_API void mc_free(void* ptr);
// ---- Error handling -------------------------------------------------

/** Returns the last error message as a null-terminated string, or NULL. */
MUSICCHAIN_API const char* mc_last_error(void);
// ---- Wallet ---------------------------------------------------------

typedef void* mc_wallet_t;
/** Load an existing wallet from path.
 *  Returns a wallet handle, or NULL on failure. */
MUSICCHAIN_API mc_wallet_t mc_wallet_load(const char* path, const char* password);
/** Save wallet to path. Returns 0 on success. */
MUSICCHAIN_API int mc_wallet_save(mc_wallet_t wallet, const char* path);
/** Release wallet handle. */
MUSICCHAIN_API void mc_wallet_free(mc_wallet_t wallet);
/** Get wallet address as a 40-character hex string (20 bytes).
 *  Caller must free with mc_free(). */
MUSICCHAIN_API char* mc_wallet_get_address(mc_wallet_t wallet);
/** Get compressed public key as a 66-character hex string (33 bytes).
 *  Caller must free with mc_free(). */
MUSICCHAIN_API char* mc_wallet_get_public_key(mc_wallet_t wallet);
/** Sign data with the wallet private key.
 *  Returns 128-character hex string (64-byte signature), or NULL on failure.
 *  Caller must free with mc_free(). */
MUSICCHAIN_API char* mc_wallet_sign(mc_wallet_t wallet, const uint8_t* data, size_t len);
// ---- Audio decoding -------------------------------------------------

typedef void* mc_decoder_t;
/** Open an Ogg/Vorbis or Ogg/Opus decoder from raw data.
 *  Returns a decoder handle, or NULL on failure. */
MUSICCHAIN_API mc_decoder_t mc_decoder_open(const uint8_t* data, size_t len);
/** Release decoder handle. */
MUSICCHAIN_API void mc_decoder_free(mc_decoder_t decoder);
/** Get sample rate in Hz. */
MUSICCHAIN_API int mc_decoder_get_sample_rate(mc_decoder_t decoder);
/** Get channel count. */
MUSICCHAIN_API int mc_decoder_get_channels(mc_decoder_t decoder);
/** Get total duration in milliseconds. */
MUSICCHAIN_API uint32_t mc_decoder_get_duration_ms(mc_decoder_t decoder);
/** Decode up to max_samples interleaved signed-16-bit samples into buf.
 *  Returns number of samples decoded, 0 at EOF, -1 on error. */
MUSICCHAIN_API int mc_decoder_read(mc_decoder_t decoder, int16_t* buf, int max_samples);
/** Seek to position in milliseconds. Returns 0 on success. */
MUSICCHAIN_API int mc_decoder_seek(mc_decoder_t decoder, uint32_t position_ms);
/** Get current playback position in milliseconds. */
MUSICCHAIN_API uint32_t mc_decoder_position_ms(mc_decoder_t decoder);
// ---- Checksum -------------------------------------------------------

/** Compute heartbeat checksum over interleaved signed-16-bit samples.
 *  sum = sum of abs(sample) for all samples, result = sum mod 2^32. */
MUSICCHAIN_API uint32_t mc_compute_checksum(const int16_t* samples, int count);
// ---- Fingerprinting -------------------------------------------------

typedef void* mc_fingerprint_t;
/** Generate a Chromaprint fingerprint from raw Ogg data.
 *  Returns a fingerprint handle, or NULL on failure. */
MUSICCHAIN_API mc_fingerprint_t mc_fingerprint_generate(const uint8_t* data, size_t len);
/** Load fingerprint from base64-compressed string.
 *  Returns a fingerprint handle, or NULL on failure. */
MUSICCHAIN_API mc_fingerprint_t mc_fingerprint_from_compressed(const char* base64);
/** Release fingerprint handle. */
MUSICCHAIN_API void mc_fingerprint_free(mc_fingerprint_t fp);
/** Get compressed base64 fingerprint string.
 *  Caller must free with mc_free(). */
MUSICCHAIN_API char* mc_fingerprint_get_compressed(mc_fingerprint_t fp);