musicchain_player/lib/src/ffi/bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names,
//                  unnecessary_brace_in_string_interps, unused_element,
//                  always_specify_types

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Auto-generated FFI bindings for libmusicchain C API.
class MusicChainBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MusicChainBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MusicChainBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  late final ffi.Pointer<ffi.UintPtr> ___security_cookie =
      _lookup<ffi.UintPtr>('__security_cookie');

  int get __security_cookie => ___security_cookie.value;

  set __security_cookie(int value) => ___security_cookie.value = value;

  /// Initialize the library. Call once before any other function.
  /// Returns 0 on success, non-zero on failure.
  int mc_init() {
    return _mc_init();
  }

  late final _mc_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('mc_init');
  late final _mc_init = _mc_initPtr.asFunction<int Function()>();

  /// Release all library resources.
  void mc_cleanup() {
    return _mc_cleanup();
  }

  late final _mc_cleanupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('mc_cleanup');
  late final _mc_cleanup = _mc_cleanupPtr.asFunction<void Function()>();

  /// Free a string or buffer allocated by the library.
  void mc_free(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _mc_free(
      ptr,
    );
  }

  late final _mc_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'mc_free');
  late final _mc_free =
      _mc_freePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Returns the last error message as a null-terminated string, or NULL.
  ffi.Pointer<ffi.Char> mc_last_error() {
    return _mc_last_error();
  }

  late final _mc_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'mc_last_error');
  late final _mc_last_error =
      _mc_last_errorPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Load an existing wallet from path.
  /// Returns a wallet handle, or NULL on failure.
  mc_wallet_t mc_wallet_load(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _mc_wallet_load(
      path,
      password,
    );
  }

  late final _mc_wallet_loadPtr = _lookup<
      ffi.NativeFunction<
          mc_wallet_t Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('mc_wallet_load');
  late final _mc_wallet_load = _mc_wallet_loadPtr.asFunction<
      mc_wallet_t Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Save wallet to path. Returns 0 on success.
  int mc_wallet_save(
    mc_wallet_t wallet,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _mc_wallet_save(
      wallet,
      path,
    );
  }

  late final _mc_wallet_savePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              mc_wallet_t, ffi.Pointer<ffi.Char>)>>('mc_wallet_save');
  late final _mc_wallet_save = _mc_wallet_savePtr
      .asFunction<int Function(mc_wallet_t, ffi.Pointer<ffi.Char>)>();

  /// Release wallet handle.
  void mc_wallet_free(
    mc_wallet_t wallet,
  ) {
    return _mc_wallet_free(
      wallet,
    );
  }

  late final _mc_wallet_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mc_wallet_t)>>(
          'mc_wallet_free');
  late final _mc_wallet_free =
      _mc_wallet_freePtr.asFunction<void Function(mc_wallet_t)>();

  /// Get wallet address as a 40-character hex string (20 bytes).
  /// Caller must free with mc_free().
  ffi.Pointer<ffi.Char> mc_wallet_get_address(
    mc_wallet_t wallet,
  ) {
    return _mc_wallet_get_address(
      wallet,
    );
  }

  late final _mc_wallet_get_addressPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(mc_wallet_t)>>(
          'mc_wallet_get_address');
  late final _mc_wallet_get_address = _mc_wallet_get_addressPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(mc_wallet_t)>();

  /// Get compressed public key as a 66-character hex string (33 bytes).
  /// Caller must free with mc_free().
  ffi.Pointer<ffi.Char> mc_wallet_get_public_key(
    mc_wallet_t wallet,
  ) {
    return _mc_wallet_get_public_key(
      wallet,
    );
  }

  late final _mc_wallet_get_public_keyPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(mc_wallet_t)>>(
          'mc_wallet_get_public_key');
  late final _mc_wallet_get_public_key = _mc_wallet_get_public_keyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(mc_wallet_t)>();

  /// Sign data with the wallet private key.
  /// Returns 128-character hex string (64-byte signature), or NULL on failure.
  /// Caller must free with mc_free().
  ffi.Pointer<ffi.Char> mc_wallet_sign(
    mc_wallet_t wallet,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _mc_wallet_sign(
      wallet,
      data,
      len,
    );
  }

  late final _mc_wallet_signPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(mc_wallet_t, ffi.Pointer<ffi.Uint8>,
              ffi.Size)>>('mc_wallet_sign');
  late final _mc_wallet_sign = _mc_wallet_signPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          mc_wallet_t, ffi.Pointer<ffi.Uint8>, int)>();

  /// Open an Ogg/Vorbis or Ogg/Opus decoder from raw data.
  /// Returns a decoder handle, or NULL on failure.
  mc_decoder_t mc_decoder_open(
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _mc_decoder_open(
      data,
      len,
    );
  }

  late final _mc_decoder_openPtr = _lookup<
      ffi.NativeFunction<
          mc_decoder_t Function(
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('mc_decoder_open');
  late final _mc_decoder_open = _mc_decoder_openPtr
      .asFunction<mc_decoder_t Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Release decoder handle.
  void mc_decoder_free(
    mc_decoder_t decoder,
  ) {
    return _mc_decoder_free(
      decoder,
    );
  }

  late final _mc_decoder_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mc_decoder_t)>>(
          'mc_decoder_free');
  late final _mc_decoder_free =
      _mc_decoder_freePtr.asFunction<void Function(mc_decoder_t)>();

  /// Get sample rate in Hz.
  int mc_decoder_get_sample_rate(
    mc_decoder_t decoder,
  ) {
    return _mc_decoder_get_sample_rate(
      decoder,
    );
  }

  late final _mc_decoder_get_sample_ratePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(mc_decoder_t)>>(
          'mc_decoder_get_sample_rate');
  late final _mc_decoder_get_sample_rate =
      _mc_decoder_get_sample_ratePtr.asFunction<int Function(mc_decoder_t)>();

  /// Get channel count.
  int mc_decoder_get_channels(
    mc_decoder_t decoder,
  ) {
    return _mc_decoder_get_channels(
      decoder,
    );
  }

  late final _mc_decoder_get_channelsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(mc_decoder_t)>>(
          'mc_decoder_get_channels');
  late final _mc_decoder_get_channels =
      _mc_decoder_get_channelsPtr.asFunction<int Function(mc_decoder_t)>();

  /// Get total duration in milliseconds.
  int mc_decoder_get_duration_ms(
    mc_decoder_t decoder,
  ) {
    return _mc_decoder_get_duration_ms(
      decoder,
    );
  }

  late final _mc_decoder_get_duration_msPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(mc_decoder_t)>>(
          'mc_decoder_get_duration_ms');
  late final _mc_decoder_get_duration_ms =
      _mc_decoder_get_duration_msPtr.asFunction<int Function(mc_decoder_t)>();

  /// Decode up to max_samples interleaved signed-16-bit samples into buf.
  /// Returns number of samples decoded, 0 at EOF, -1 on error.
  int mc_decoder_read(
    mc_decoder_t decoder,
    ffi.Pointer<ffi.Int16> buf,
    int max_samples,
  ) {
    return _mc_decoder_read(
      decoder,
      buf,
      max_samples,
    );
  }

  late final _mc_decoder_readPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(mc_decoder_t, ffi.Pointer<ffi.Int16>,
              ffi.Int)>>('mc_decoder_read');
  late final _mc_decoder_read = _mc_decoder_readPtr
      .asFunction<int Function(mc_decoder_t, ffi.Pointer<ffi.Int16>, int)>();

  /// Seek to position in milliseconds. Returns 0 on success.
  int mc_decoder_seek(
    mc_decoder_t decoder,
    int position_ms,
  ) {
    return _mc_decoder_seek(
      decoder,
      position_ms,
    );
  }

  late final _mc_decoder_seekPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(mc_decoder_t, ffi.Uint32)>>(
          'mc_decoder_seek');
  late final _mc_decoder_seek =
      _mc_decoder_seekPtr.asFunction<int Function(mc_decoder_t, int)>();

  /// Get current playback position in milliseconds.
  int mc_decoder_position_ms(
    mc_decoder_t decoder,
  ) {
    return _mc_decoder_position_ms(
      decoder,
    );
  }

  late final _mc_decoder_position_msPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(mc_decoder_t)>>(
          'mc_decoder_position_ms');
  late final _mc_decoder_position_ms =
      _mc_decoder_position_msPtr.asFunction<int Function(mc_decoder_t)>();

  /// Compute heartbeat checksum over interleaved signed-16-bit samples.
  /// sum = sum of abs(sample) for all samples, result = sum mod 2^32.
  int mc_compute_checksum(
    ffi.Pointer<ffi.Int16> samples,
    int count,
  ) {
    return _mc_compute_checksum(
      samples,
      count,
    );
  }

  late final _mc_compute_checksumPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              ffi.Pointer<ffi.Int16>, ffi.Int)>>('mc_compute_checksum');
  late final _mc_compute_checksum = _mc_compute_checksumPtr
      .asFunction<int Function(ffi.Pointer<ffi.Int16>, int)>();

  /// Generate a Chromaprint fingerprint from raw Ogg data.
  /// Returns a fingerprint handle, or NULL on failure.
  mc_fingerprint_t mc_fingerprint_generate(
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _mc_fingerprint_generate(
      data,
      len,
    );
  }

  late final _mc_fingerprint_generatePtr = _lookup<
      ffi.NativeFunction<
          mc_fingerprint_t Function(
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('mc_fingerprint_generate');
  late final _mc_fingerprint_generate = _mc_fingerprint_generatePtr
      .asFunction<mc_fingerprint_t Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Load fingerprint from base64-compressed string.
  /// Returns a fingerprint handle, or NULL on failure.
  mc_fingerprint_t mc_fingerprint_from_compressed(
    ffi.Pointer<ffi.Char> base64,
  ) {
    return _mc_fingerprint_from_compressed(
      base64,
    );
  }

  late final _mc_fingerprint_from_compressedPtr = _lookup<
          ffi.NativeFunction<mc_fingerprint_t Function(ffi.Pointer<ffi.Char>)>>(
      'mc_fingerprint_from_compressed');
  late final _mc_fingerprint_from_compressed =
      _mc_fingerprint_from_compressedPtr
          .asFunction<mc_fingerprint_t Function(ffi.Pointer<ffi.Char>)>();

  /// Release fingerprint handle.
  void mc_fingerprint_free(
    mc_fingerprint_t fp,
  ) {
    return _mc_fingerprint_free(
      fp,
    );
  }

  late final _mc_fingerprint_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(mc_fingerprint_t)>>(
          'mc_fingerprint_free');
  late final _mc_fingerprint_free =
      _mc_fingerprint_freePtr.asFunction<void Function(mc_fingerprint_t)>();

  /// Get compressed base64 fingerprint string.
  /// Caller must free with mc_free().
  ffi.Pointer<ffi.Char> mc_fingerprint_get_compressed(
    mc_fingerprint_t fp,
  ) {
    return _mc_fingerprint_get_compressed(
      fp,
    );
  }
